# ld_note

./: BOOTLOADER调用内核需要传递的参数以及启动内核串口打印注意.txt  Brazzers.txt  LINUX内核内存屏障.txt  Linux ALSA声卡驱动.docx  Linux Regulator Framework.docx  Linux clk 模型.doc  Linux common clock framework_概述.doc  Linux 内核裁剪的自动化方法 .txt  Linux 嵌入式启动以及优化.txt  Linux内核platform_get_resource函数如何得到设备的基地址.txt  Linux内核中CPU主频和电压调整.txt  Linux内核架构.docx  Linux内核的Makefile.docx  Linux内核访问外设IO资源的方式.sh  Linux内核配置详解.sh  Linux命令行编辑快捷键.txt  Linux电源管理_整体架构.docx  Linux设备驱动之IO端口与IO内存.docx  Linux高效编程的一些总结.sh  README.md  S3C2410平台内核的解压过程.txt  Virtual Development Board（qemu-arm-linux-build）.txt  arm-memory-map.txt  board@build-start.sh  bootloader概论.txt  config@cross-configure.txt  config@enviroment.txt  config@linux-network-cmd.txt  config@linux-network.txt  config@pkg-config.txt  create@crosstool.txt  embeded-web.txt  gs.txt  kernel-basic.sh  kernel-build.docx  kernel-build.sh  kernel-datastruct-misc.txt  kernel@arm-desc.sh  kernel@arm-startkernel.sh  kernel@build-ubuntu.txt  (+28 more)
cheatsheet/ops_doc-master/Service/cfaq/autotools-c-template/autotools-c-template/: .gitignore  README.md  configure.ac
cheatsheet/ops_doc-master/Service/cfaq/autotools-c-template/c-project-template/: .gitignore  Automake.am  Makefile.am  README  configure.ac
cheatsheet/ops_doc-master/Service/cfaq/autotools-c-template/clibAutotoolsTemplate/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
cheatsheet/ops_doc-master/Service/cfaq/example_c/c_class/: CMakeLists.txt  c_class.mk  c_class.project  c_class.txt  employee.c  main.c  person.c
cheatsheet/ops_doc-master/Service/cfaq/example_c/ods/: CMakeLists.txt  compile_flags.txt  ods.mk  ods.project
cheatsheet/ops_doc-master/Service/cfaq/personalNoteBook/: AI-MLP.py  AI-Softmax-MNist.py  AI-firstExample.py  Anaconda_Jupyter_Notebook.txt  Awk-note.txt  C++Primer.txt  CMakeLists.txt  CMakeLists2.txt  C_pointer_Array.txt  Cpp11.txt  Cpp_C98_note.txt  C专家编程.txt  EffectiveC++.txt  EffectiveSTL.txt  NewsScrapy-163.py  README.md  Shadowsocks.md  UNIX 网络编程-套接字联网API.txt  Unix环境高级编程-note.txt  css_note.txt  data2csv.py  deepLearning_top10.md  gdb-note.txt  generateCnpFromLog.py  go_learn.txt  htmlLearn_Demo.html  html_note.txt  j1939-obd-iot.txt  java-reflection-array.java  java-reflection.java  java_note.txt  javascript_note.txt  learn-makefile.md  linuxCommand.txt  machineLearning1.txt  newGitRepo  npm_download_proxy.txt  pipInstallOnWindows.md  python-diffParamsWithXml.py  pythonLearn-args-kwargs.py  (+20 more)
cheatsheet/ops_doc-master/Service/ds/libubox-avl/common/: CMakeLists.txt  autobuf.c  autobuf.h  avl.c  avl.h  bitmap256.c  bitmap256.h  container_of.h  isonumber.c  isonumber.h  json.c  json.h  list.h  (+14 more)
cheatsheet/ops_doc-master/Service/libevent/lb-master/: AUTHORS  ChangeLog  FEATURES  INSTALL  LICENCE  MANIFEST  Makefile  Makefile.am  Makefile.in  NEWS  README  README.in  README.md  SAMPLE-OUTPUT  TODO  aclocal.m4  autogen (1).sh  bench-lb.sh  callbacks.c  cb  cb.c  config.status  configure  configure.ac  lb  lb.8  lb.c  lb.h  lb.servers  libtool  nb  nb.c  requests.c  servers.c  site-lb.h  site-lb.h.in  slurp.c  stamp-h1  tags  time.c  (+5 more)
cheatsheet/ops_doc-master/Service/libevent/libevent-bench/: LICENSE  Makefile  Makefile.am  Makefile.in  aclocal.m4  bench-client.c  bench-log.c  bench-log.h  bench-messages.c  bench-messages.h  bench-protocol.txt  bench-server.c  client  config.h  config.status  configure  configure.in  libevent-2.1.so.6  readme.txt  server  ssl-utils.c  ssl-utils.h  tags
cheatsheet/ops_doc-master/Service/libevent/zunkfs/: .gitignore  CMakeLists.txt  HACKING  LICENSE  Makefile  README  base64-test.c  base64.c  base64.h  byteorder.h  chunk-db-cmd.c  chunk-db-file.c  chunk-db-local.c  chunk-db-map.c  chunk-db-mem.c  chunk-db-sqlite.c  chunk-db-unit-test.c  chunk-db-zdb.c  chunk-db.c  chunk-db.h  chunk-tree.c  chunk-tree.h  ctree-unit-test.c  digest.c  digest.h  dir-unit-test.c  dir.c  dir.h  fetch.sh  file-unit-test.c  file.c  file.h  fuse.c  list.h  local_libevent_installer.sh  mkfs.zunkfs  mutex.c  mutex.h  tags  unit-test-utils.c  (+7 more)
cheatsheet/ops_doc-master/Service/libuv/libmmq-master/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mmq.h  mmq_msg.c  mmq_msg.h  mmq_peer.c  mmq_test.cpp
cheatsheet/ops_doc-master/Service/monit/monit-5.25.2/: .configure.ac.swp  COPYING  Makefile  README  bootstrap  config.status  configure  configure.ac  libtool  monitrc  tags
cheatsheet/ops_doc-master/cii/cii_mem/: Makefile  Makefile.am  Makefile.in  README.md  circle_buff.asta  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
cheatsheet/ops_doc-master/cii/cii_mem/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.2t
cheatsheet/ops_doc-master/cii/cii_mem/circle_buff/: Makefile  Makefile.am  Makefile.in
cheatsheet/ops_doc-master/cii/cii_mem/m_alloc/: Makefile  Makefile.am  Makefile.in  m_alloc.c  m_alloc.h  test.c  tools-util.h
cheatsheet/ops_doc-master/cii/cii_mem/psignal/: Makefile  Makefile.am  Makefile.in
cheatsheet/ops_doc-master/cii/cii_mem/test/: Makefile  Makefile.am  Makefile.in  mem_check.c  mem_test.c  test
cheatsheet/ops_doc-master/cii/cii_mem/tools_util/: Makefile  Makefile.am  Makefile.in
cheatsheet/ops_doc-master/cii/monit/: CHANGES  CONTRIBUTORS  Makefile.am  Makefile.in  monit.1  tags
cheatsheet/ops_doc-master/cii/monit/libmonit/: COPYING  Makefile.am  configure  configure.ac  libtool
cheatsheet/ops_doc-master/cii/monit/next/: bison_flex.txt  lex.yy.c  p.y  tokens.h  y.tab.c
cheatsheet/ops_doc-master/cii/monit/src/: .monit.h.swp  alert.h  control.c  daemonize.c  env.c  event.c  event.h  file.h  gc.c  http.c  lex.yy.c  md5_crypt.h  monit.h  net.c  net.h  sha1.h  state.h  tokens.h  util.c  util.h  validate.c  y.tab.c
cheatsheet/ops_doc-master/makefile/cmake/procd/: CMakeLists.txt  make_capabilities_h.sh  make_syscall_h.sh
flex_bsion/test/flex/yacc/example6/: CMakeLists.txt  example1.l  example3.l  example3.txt  example4.l  example4.y  example5.l  example5.y  example6.l  example6.txt  example6.y
(+13872 files in other folders)
