AC_INIT([libevent-bench], [0.0.0])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([bench-messages.c])

AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_GCC_TRADITIONAL
AC_HEADER_STDC

if test "$GCC" = yes; then
	CFLAGS="$CFLAGS -Wall"
fi

PKG_CHECK_MODULES(LIBEVENT, libevent >= 2.0.0)
AC_SUBST(LIBEVENT_CFLAGS)
AC_SUBST(LIBEVENT_LIBS)
PKG_CHECK_MODULES(LIBEVENT_SSL, libevent_openssl >= 2.0.0)
AC_SUBST(LIBEVENT_SSL_CFLAGS)
AC_SUBST(LIBEVENT_SSL_LIBS)

AC_OUTPUT(Makefile)
